# wlaunch-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
assets/: wlaunch-clipboard.desktop  wlaunch-clipboard.service  wlaunch.desktop
src/: main.rs
src/core/: config.rs  indexer.rs  item.rs  mod.rs
src/features/: ai.rs  audio.rs  bitwarden.rs  bluetooth.rs  calculator.rs  clipboard.rs  converter.rs  docker.rs  emoji.rs  files.rs  mod.rs  network.rs  notes.rs  processes.rs  recent_files.rs  snippets.rs  ssh.rs  timer.rs  todos.rs  websearch.rs  windows.rs
src/ui/: mod.rs  theme.rs  window.rs
